--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -164,6 +164,7 @@
         <service
             android:name=".LogcatService"
             android:exported="false"
+            android:foregroundServiceType="specialUse"
             android:label="@string/clash_logcat" />
         <service
             android:name=".TileService"
@@ -179,6 +180,7 @@
 
         <receiver
             android:name=".RestartReceiver"
+            android:foregroundServiceType="specialUse"
             android:enabled="false"
             android:exported="true">
             <intent-filter>
